// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components TextHTMLOrElementComponent can render child div 1`] = `
<DocumentFragment>
  <div>
    Child Div
  </div>
</DocumentFragment>
`;

exports[`components TextHTMLOrElementComponent can render child string 1`] = `
<DocumentFragment>
  <span>
    Child String
  </span>
</DocumentFragment>
`;

exports[`components TextHTMLOrElementComponent can render empty children 1`] = `
<DocumentFragment>
  <span />
</DocumentFragment>
`;

exports[`components TextHTMLOrElementComponent can render string HTML 1`] = `
<DocumentFragment>
  <span>
    <a
      href="http://cash.app/"
    >
      String HTML Link
    </a>
  </span>
</DocumentFragment>
`;
